# iFree

./: 123pan.js  AD.list  AliYUN-DH-DoH-RESERVE.sgmodule  AliYUN-DoH-RESERVE-bate.sgmodule  AliYUN-DoH-RESERVE.sgmodule  AssppProFix.sgmodule  Asspp_Pro.js  BPB  BPB.sgmodule  BPBcopy.sgmodule  DE-Felix_Gassan  Downie  Downiets  EnigMano-instance.ps1  FREE  GTP4o.sgmodule  MGTV.sgmodule  README.md  SANFEN  SERV00  SERV00_CT8  TV-IPV4 (2023_08_10 10_04_28 UTC).m3u  US-Accuserv  Untitled-1.sh  VM copy.conf  VM.conf  VMHY.conf  VMTEST copy.conf  VMTEST.conf  VMTEST_副本.conf  WasteCat.sgmodule  XUI  bdupdate.lua  bilibili.sgmodule  brew_manager.sh  builds.sh  dh-dns.global-idt.net.sgmodule  domain.sgmodule  easylist_adservers.list  easylist_adservers.txt  (+23 more)
.github /workflows/: main.yml
.github/workflows/: Mac.yml  main.yml
26100/: ConvertConfig.ini  uup_download_macos.sh  uup_download_windows.cmd
26100/files/: convert_config_macos  converter_multi  converter_windows
26120/: ConvertConfig.ini  CustomAppsList.txt  uup_download_macos.sh  uup_download_windows.cmd
26120/files/: convert_config_linux  get_aria2.ps1
WebstormProjects/untitled/: 1.html  JavaScript 的名字.js  String 类型.js  big write.js  const.js  hello.js  let.js  login.js  typeof 运算符.js  使用 '?' 重写 'if' 语句.js  使用 '?' 重写 'if..else' 语句.js  使用变量.js  大写的常量.js  字符串的反引号.js  显示符号.js  用箭头函数重写.js  给出正确的名字.js
WebstormProjects/untitled1/: 404.html  about.html  index.html  main.html  package-lock.json
[2358720]黑神话：悟空/: 2358720.lua
cursor/: Cargo.toml  Dockerfile  README.md  build.rs
cursor/get-token/: Cargo.toml  README.md
cursor/get-token/src/: main.rs
cursor/scripts/: build.ps1  build.sh  minify-html.js  package-lock.json  package.json  setup-windows.ps1
cursor/src/: lib.rs  main.rs  message.proto  models.rs
cursor/static/: tokeninfo.html
pythonProject1/: main.py
pythonProject4/: 1.py  2  2.py  for.py  main.py  name.docx  new_file.docx  output.txt
pythonProject5/: Test.json  data.xlsx  main.py
pythonProject6/: html.txt  main.py
pythonProject7/: main.py
(+3 files in other folders)
